.provarCaches/00D410000011HE0EAM/objects/rstkf__apjbf__c.object
<CustomObject>
    <description>apjbf__c</description>
    <fields>
        <fullName>rstkf__apjbf_acctholdname1__c</fullName>
        <description>apjbf_acctholdname1__c</description>
        <inlineHelpText>Used in the Header Record, this field contains the Bank Account holder’s name, sourced from the Rootstock ERP Company Master, Company Name.</inlineHelpText>
        <label>Account Holder&apos;s Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apjbf_acctholdname2__c</fullName>
        <description>apjbf_acctholdname2__c</description>
        <inlineHelpText>Used in the Detail Record, this field carries the Vendor Name associated with this payment</inlineHelpText>
        <label>Account Holder Name (Vendor)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apjbf_acctnumber2__c</fullName>
        <description>apjbf_acctnumber2__c</description>
        <inlineHelpText>Used in the Detail Record, this field carries the first 7 characters of the Vendor’s International Bank Account Number (IBAN) associated with this payment</inlineHelpText>
        <label>Account Number (Vendor)</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apjbf_acctnumber__c</fullName>
        <description>apjbf_acctnumber__c</description>
        <inlineHelpText>Used in the Header Record, this field contains the Bank Account Number from where the funds are to be drawn.  It is sourced using the first 7 characters of the Rootstock GL Bank Account Number.</inlineHelpText>
        <label>Account Number</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apjbf_accttype2__c</fullName>
        <description>apjbf_accttype2__c</description>
        <inlineHelpText>Used in the Detail Record, currently this is a hard-coded value set to &apos;1&apos;</inlineHelpText>
        <label>Account Type (Vendor)</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apjbf_accttype__c</fullName>
        <description>apjbf_accttype__c</description>
        <label>Account Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apjbf_amount__c</fullName>
        <description>apjbf_amount__c</description>
        <inlineHelpText>Used in the Detail Record, this field carries the amount of the payment (same as the EFT or Check Amount).</inlineHelpText>
        <label>Transfer Amount</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apjbf_bankname__c</fullName>
        <description>apjbf_bankname__c</description>
        <label>Remitting Bank Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apjbf_bankno__c</fullName>
        <description>apjbf_bankno__c</description>
        <inlineHelpText>Used in the Header Record, this field carries the Remitting Bank Number for this bank account (sourced from a field of the same name on the Bank Account)</inlineHelpText>
        <label>Remitting Bank Number</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apjbf_branchname__c</fullName>
        <description>apjbf_branchname__c</description>
        <label>Remitting Branch Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apjbf_branchno__c</fullName>
        <description>apjbf_branchno__c</description>
        <inlineHelpText>Used in the Header Record, this field carries the Remitting Branch Number for this bank account (sourced from a field of the same name on the Bank Account)</inlineHelpText>
        <label>Remitting Branch Number</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apjbf_class__c</fullName>
        <description>apjbf_class__c</description>
        <inlineHelpText>Currently this is a hard-coded value set to &apos;21&apos;</inlineHelpText>
        <label>Classification</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apjbf_clearinghouse__c</fullName>
        <description>apjbf_clearinghouse__c</description>
        <label>Clearing House Number</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apjbf_codetype__c</fullName>
        <description>apjbf_codetype__c</description>
        <inlineHelpText>Used in the Header Record, this field carries the character set type used (derived from the AP Control setting): 0 = JIS (or ASCII)  1 = EBCDIC</inlineHelpText>
        <label>Code Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apjbf_custcode2__c</fullName>
        <description>apjbf_custcode2__c</description>
        <label>Customer Code 2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apjbf_custcode__c</fullName>
        <description>apjbf_custcode__c</description>
        <label>Customer Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apjbf_eftrqstid__c</fullName>
        <description>apjbf_eftrqstid__c</description>
        <inlineHelpText>Used in the Header Record, this field carries the EFT Requestor ID for this bank (sourced from the Bank Account)</inlineHelpText>
        <label>EFT Requestor ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apjbf_exportrec121__c</fullName>
        <description>apjbf_exportrec121__c</description>
        <inlineHelpText>This field contains the fully formatted 120-character export record – with one extra trailing character to preserve the spacing.</inlineHelpText>
        <label>JBF Export Record (121 chars)</label>
        <length>121</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apjbf_exportrec__c</fullName>
        <description>apjbf_exportrec__c</description>
        <inlineHelpText>This field contains the fully formatted 120-character export record.  This is the only field on this record that is actually transmitted to the bank.</inlineHelpText>
        <label>JBF Export Record</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apjbf_iddisplay__c</fullName>
        <description>apjbf_iddisplay__c</description>
        <label>Identification Display</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apjbf_paysession__c</fullName>
        <description>apjbf_paysession__c</description>
        <inlineHelpText>This field provides the linkage up to the Payment Selection Session from which this export was created.</inlineHelpText>
        <label>Payment Selection Session</label>
        <referenceTo>rstkf__paysession__c</referenceTo>
        <relationshipLabel>Payment Session JBF Exports</relationshipLabel>
        <relationshipName>apjbfs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstkf__apjbf_priority__c</fullName>
        <description>apjbf_priority__c</description>
        <inlineHelpText>Used in the Detail Record, currently this is a hard-coded value set to ‘8’</inlineHelpText>
        <label>Transfer Priority</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apjbf_recordid__c</fullName>
        <description>apjbf_recordid__c</description>
        <inlineHelpText>Numeric representation of the record type (used in the export):   1=Header, 2=Data, 8=Trailer, 9=End</inlineHelpText>
        <label>Record Identifier</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apjbf_rectype__c</fullName>
        <description>apjbf_rectype__c</description>
        <inlineHelpText>User-friendly description of the record type (Header, Data, Trailer or End)</inlineHelpText>
        <label>Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Header</fullName>
                </value>
                <value>
                    <fullName>Data</fullName>
                </value>
                <value>
                    <fullName>Trailer</fullName>
                </value>
                <value>
                    <fullName>End</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__apjbf_recvbankname__c</fullName>
        <description>apjbf_recvbankname__c</description>
        <label>Receiving Bank Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apjbf_recvbankno__c</fullName>
        <description>apjbf_recvbankno__c</description>
        <inlineHelpText>Used in the Header Record, this field carries the first 4 characters of the Vendor’s Business Identifier Code (BIC) associated with this payment</inlineHelpText>
        <label>Receiving Bank Number</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apjbf_recvbranchname__c</fullName>
        <description>apjbf_recvbranchname__c</description>
        <label>Receiving Branch Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apjbf_recvbranchno__c</fullName>
        <description>apjbf_recvbranchno__c</description>
        <inlineHelpText>Used in the Header Record, this field carries the first 3 characters of the Vendor’s Bank Account Reference Number associated with this payment</inlineHelpText>
        <label>Receiving Branch Number</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apjbf_seq__c</fullName>
        <description>apjbf_seq__c</description>
        <label>JBF Sequence</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apjbf_status__c</fullName>
        <description>apjbf_status__c</description>
        <inlineHelpText>Used in the Detail Record, currently this is a hard-coded value set to &apos;0&apos;</inlineHelpText>
        <label>Status</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apjbf_totamount__c</fullName>
        <description>apjbf_totamount</description>
        <inlineHelpText>Used in the Trailer Record, this field carries the total amount (sum of all Detail Record amounts) in the export.</inlineHelpText>
        <label>Total Amount</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apjbf_totcount__c</fullName>
        <description>apjbf_totcount__c</description>
        <inlineHelpText>Used in the Trailer Record, this field carries the total number of Detail Records (payments) in the export.</inlineHelpText>
        <label>Total Count</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apjbf_txfrdate__c</fullName>
        <description>apjbf_txfrdate__c</description>
        <inlineHelpText>Used in the Header Record, this field contains the Bank Transfer Date, sourced from the Payment Selection Session Check Date.</inlineHelpText>
        <label>Transfer Date (MMDD)</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>rstkf__apjbf_paysession__r.Name &amp; &apos; – &apos; &amp; TEXT(rstkf__apjbf_seq__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <description>triggeroptions__c</description>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Payment Session JBF Export</label>
    <listViews>
        <fullName>All2</fullName>
        <columns>NAME</columns>
        <columns>rstkf__apjbf_acctholdname1__c</columns>
        <columns>rstkf__apjbf_codetype__c</columns>
        <columns>rstkf__apjbf_exportrec__c</columns>
        <columns>rstkf__apjbf_status__c</columns>
        <columns>rstkf__apjbf_totamount__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstkf__apjbf_rectype__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__All</fullName>
        <columns>NAME</columns>
        <columns>rstkf__apjbf_rectype__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Session JBF Exports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>